--- a/ProyectoOUTWORLD/views/downloadExcel.html
+++ b/ProyectoOUTWORLD/views/downloadExcel.html
@@ -22,6 +22,9 @@
             <div class="p-4   text-black w-100 d-inline-block">
                 <h3>Gestion Documentos</h3>
             </div>
+            <div class="p-4   text-black w-100 d-inline-block">
+                <a href="http://localhost:8081/efevserv/gestion-excel/decargarExcel">Descargar Excel</a>
+            </div>
             <div class="p-4  text-black h-25 d-inline-block">
                 <!--<a href="http://localhost:8081/efevserv/gestion-excel/decargarExcel" class="btn btn-info btn-lg" id="downloadExcel">Descargar XLS 
                     <i class="fa fa-download" aria-hidden="true"></i></a>-->
